<resources>
    <string name="app_name">Welcome to Astana</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="what_are_you_looking_for">Что вы ищете?</string>
    <string name="kaz">КАЗ</string>
    <string name="rus">РУС</string>
    <string name="eng">ENG</string>
    <string name="developed_in">Разработано в</string>
    <string name="press_Back">Нажмите назад еще раз чтобы выйти</string>
    <string name="title_activity_description" translatable="false">ДОСТОПРИМЕЧАТЕЛЬНОСТИ</string>
    <string name="expo">10 июня 2017 года откроет свои двери Международная специализированная Выставка «Астана ЭСКПО-2017». В подготовке павильонов примут участие 100 стран и более 10 международных организаций.</string>
    <string name="learn_more">Узнать больше</string>
    <string name="title_activity_pamyatka_description" translatable="false">PamyatkaDescription</string>
    <string name="title_activity_gde_poest_description" translatable="false">GdePoestDescription</string>
    <string name="title_activity_gde_ostanovitsya_description" translatable="false">GdeOstanovitsyaDescription</string>
    <string name="title_activity_events_description" translatable="false">СОБЫТИЯ</string>
    <string name="title_activity_taxi" translatable="false">TaxiActivity</string>
    <string name="share">Поделиться</string>
    <string name="call_taxi">Вызвать такси</string>
    <string name="make_way">Проложить маршрут</string>
    <string name="buy">КУПИТЬ</string>
    <string name="torgoviy_centres">Торговые центры</string>
    <string name="Zona_otdyha">Зоны отдыха</string>
    <string name="beaches">Пляжи</string>
    <string name="Nochnye_cluby">Ночные клубы</string>
    <string name="cinemas">Кинотеатры</string>
    <string name="entertainment">Развлечения</string>
    <string name="all_events">БЛИЖАЙШИЕ СОБЫТИЯ</string>
    <string name="Concerts">Концерты</string>
    <string name="vystavky">Выставки</string>
    <string name="theatre">Театральные постановки</string>
    <string name="sport_events">Спортивные мероприятия</string>
    <string name="expo_event">Мероприятия Expo</string>
    <string name="city_ways">Городские маршруты</string>
    <string name="Otdyh">Отдых за городом</string>
    <string name="tours">Туры по казахстану</string>
    <string name="all_hotels">Все отели</string>
    <string name="hotels">Гостиницы</string>
    <string name="hostels">Хостелы</string>
    <string name="aparments">Апартаменты</string>
    <string name="all_places_cafe">Все заведения</string>
    <string name="cafe">Кафе</string>
    <string name="restourant">Рестораны</string>
    <string name="bar">Бары</string>
    <string name="kuda_shodit">КУДА СХОДИТЬ</string>
    <string name="events">События</string>
    <string name="sightseegins">Достопримечательности</string>
    <string name="excursions">Экскурсии</string>
    <string name="shopping_and">Шоппинг и Развлечения</string>
    <string name="gde_poest">ГДЕ ПОЕСТЬ</string>
    <string name="gde_ostanovitsya">ГДЕ ОСТАНОВИТЬСЯ</string>
    <string name="pamyatka">ПАМЯТКА ТУРИСТУ</string>
    <string name="prebyvanie">Пребывание</string>
    <string name="transport">Транспорт</string>
    <string name="poleznaya">Полезная информация</string>
    <string name="extrennaya">Экстренная помощь</string>
    <string name="Expo">EXPO</string>
    <string name="chinese" translatable="false">旅遊信息</string>
    <string name="read_more">Читать дальше</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="reset_filter">Сбросить фильтр</string>
    <string name="all_objects">Все Объекты</string>
    <string name="Culture">Культура</string>
    <string name="History">История</string>
    <string name="Dohovnost">Духовность</string>
    <string name="Dosug">Досуг</string>
    <string name="Interesting_places">Интересные Места</string>
    <string name="architecture">Архитектура</string>
    <string name="show_more">Посмотреть все</string>
    <string name="book">Получить бронь</string>
    <string name="close">Закрыть</string>


</resources>
