<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLinear"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="top"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1"

    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="31dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        >

        <ImageView
            android:id="@+id/imgX"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:onClick="Xbutton"
            android:src="@drawable/ic_cross_symbol"


            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            >

        <TextView
            android:text="@string/rus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtKaz"
            android:gravity="end"
            android:textSize="@dimen/font_size"
            android:textColor="@android:color/black"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:text="@string/kaz"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtRus"
            android:gravity="end"
            android:textColor="#C1C1C1"
            android:textSize="@dimen/font_size"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:text="@string/eng"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtEng"
            android:gravity="end"
            android:textColor="#C1C1C1"
            android:textSize="@dimen/font_size"
            android:layout_marginLeft="15dp"
            />

            </LinearLayout>


    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_right_arrow"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/searchTxt"
        android:layout_marginTop="10dp"
        android:hint="@string/what_are_you_looking_for"
        android:textColorHint="#C1C1C1"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ExpandableListView
        android:id="@+id/expandableListView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:groupIndicator="@null"
        android:childIndicator="@null"
        android:listSelector="@android:color/transparent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">
    </ExpandableListView>

    <View
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#F6FAFB"/>
    <LinearLayout
        android:background="#F6FAFB"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_facebook"
            android:id="@+id/facebook"
            android:onClick="goToFacebook" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_mail"
            android:id="@+id/mail"
            android:onClick="goToMailru" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_insta"
            android:id="@+id/insta"
            android:onClick="goToInsta" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_vk"
            android:id="@+id/vk"
            android:onClick="goToVk" />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="#F6FAFB"
        >

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/developed_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#C1C1C1"
            android:textSize="@dimen/font_size"

            />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/ibec"
            android:id="@+id/ibec"
            android:onClick="goToVk" />

    </LinearLayout>

</LinearLayout>
