<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_description_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="kz.recycleview.Description_Activity"
        tools:showIn="@layout/activity_description"
        >
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="258dp"/>

        <LinearLayout
            android:id="@+id/LinearSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" />


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="Name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:drawableLeft="@drawable/ic_map_marker"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_map_marker"
            android:text="Не указано"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp">

            <TextView
                android:id="@+id/category"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/bullet"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/bullet"
                android:text="Category"
                android:textColor="#FF8B00"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/rectangleshape"
                    android:gravity="bottom"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="2500.0 kм"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>


        <at.blogc.android.views.ExpandableTextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:ellipsize="end"
            android:lineSpacingExtra="5dp"
            android:maxLines="6"
            android:text="Description asdas asd asd asd asd asd asd as dasdasd asd ad asd asd asd asd asd asd asd asd asd asd asd asd asd asd "
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:animation_duration="1000"/>
        <TextView
            android:id="@+id/openCollapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/learn_more"
            android:textColor="@color/gray"
            android:textSize="12sp" />


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />


        <RelativeLayout
            android:id="@+id/shareButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button_selector"
            android:clickable="true"
            android:onClick="Share">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_share_symbol" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/share"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wayButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button_selector"
            android:clickable="true"
            android:onClick="GoogleMap">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_location_on_road" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/make_way"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/patient_list_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button_selector"
            android:clickable="true"
            android:onClick="CallTaxi">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_cab" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/call_taxi"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
